2013-XX-XX Jan Kotanski <jankotan@gmail.com>
	* adding group to TANGOPYEVAL datasources
	* adding PYEVAL datasource for evaluating data by python script
	* changing linking system
	* tagged as 1.2.0

2013-08-06 Jan Kotanski <jankotan@gmail.com>
	* adding filling failed object by its maximal value
	* tagged as 1.1.8

2013-06-27 Jan Kotanski <jankotan@gmail.com>
	* changing error messages
	* adding tests for string attribute
	* tagged as 1.1.7

2013-06-24 Jan Kotanski <jankotan@gmail.com>
	* status fixes for writing XMLSettings
	* fixes for writing of string attribute
	* tagged as 1.1.6

2013-05-30 Jan Kotanski <jankotan@gmail.com>
	* speed up writing by removing time.sleep() and gc.collect()
	* tagged as 1.1.5

2013-05-15 Jan Kotanski <jankotan@gmail.com>
	* adding checks during writing thejson and xmlSettings TangoDataWriter attributes
	* changing TangoDataWriter.json into TangoDataWriter.thejson
	* changing parameters in TangoDataWriter constructor
	* adding logging Streams
	* adding nexdatas_canfail=FAILED attribute
	* tagged as 1.1.4

2013-04-26 Jan Kotanski <jankotan@gmail.com>
	* creating DeviceProxy for Tango DataSource in setup method
	* moving XMLCreator into nexdata.tools
	* tagged as 1.1.3

2013-04-16 Jan Kotanski <jankotan@gmail.com>
	* make fixes for 32bits version and old pninx
	* tagged as 1.1.2

2013-03-26 Jan Kotanski <jankotan@gmail.com>
	* adding support for vertices
	* changing TDS into TangoDataServer
	* adding tests
	* tagged as 1.1.1

2013-03-11 Jan Kotanski <jankotan@gmail.com>
	* adding  support for separate group names in link targets
	* making Elink.typesToNames private
	* removing a name parameter from class inherited from Elements
	* switches to pni.io library
	* extending shapes up to a rank value
	* adding tests
	* improving FieldArray class
	* tagged as 1.1.0


2013-02-06 Jan Kotanski <jankotan@gmail.com>
	* adding support for dimension casting
	* fetching a shape of the client datasource from the global JSON string