@@ -1,6 +1,7 @@
 2013-XX-XX Jan Kotanski <jankotan@gmail.com>
 	* adding group to TANGOPYEVAL datasources
 	* adding PYEVAL datasource for evaluating data by python script
+	* adding NumberOfThreads device property
 	* changing linking system
 	* tagged as 1.2.0
 
